--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="flex-parent-ft">
                 <div class="flex-child-ft item1">
-                     <a href=""><img class="logo" src="" alt=""></a> //logo oruulj uguh
+                     <a href=""><img class="logo" src="" alt=""></a> 
                      <p>Sukhbaatar duurge, Ulaanbaatar XXXXX<br></p>
                     <p>Call us: +976 XXXXXXXX</p>
                 </div>
@@ -27,7 +27,7 @@
                 <div class="flex-child-ft item3">
                     <h4>Legal</h4>
                     <ul>
-                        <li><a href="#">Terms of Use</a></li> 
+                        <li><a href="#">Terms of Use</a></li>
                         <li><a href="#">Privacy Policy</a></li>	
                         <li><a href="#">Security</a></li>
                     </ul>
@@ -35,7 +35,7 @@
                 <div class="flex-child-ft item4">
                     <h4>Account</h4>
                     <ul>
-                        <li><a href="#">My Account</a></li> 
+                        <li><a href="#">My Account</a></li>
                         <li><a href="#">User Guide</a></li>
                     </ul>
                 </div>
@@ -43,7 +43,7 @@
                     <h4>Mail Us</h4>
                     <form action="#">
                         <input type="text" placeholder="Enter your email...">
-                        <button type="submit"><a href=""><img class="logo" src="" alt=""></a></button>
+                        <button type="submit"><a></a>Send</a></button>
                     </form>
                 </div>
             </div>
