--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie website</title>
+    <script type="module" src="web.js"></script>
+    <script type="module" src="menu.js"></script>
+    <script defer src="web.js"></script>
+    <title>??????? website</title>
 </head>
 <body>  
     <!--login form popup-->
