--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Encode+Sans&family=Open+Sans&display=swap');
+    </style>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="web.js"></script>
     <script type="module" src="menu.js"></script>
     <script defer src="web.js"></script>
     <title>??????? website</title>
 </head>
-<body>  
+<body  class="body">  
 <!---------hover Menu here--------->
     <header class="ht-header">
         <div class="header-container">
-            <a href="" style="background-color: gray;"><img class="logo" src="Logo-Movie.webp" alt="MySiteLogo"></a> 
             <ul>
-                <li id="menuitems"><a href="">Home</a></li>
-                <li id="menuitems"><a href="">Movies</a></li>
-                <li id="menuitems"><a href="">Dramas</a></li>
-                <li id="menuitems"><a href="">Genres</a></li>
-                <li id="menuitems"><a href=""></a></li>
-                <li id="menuitems"><a href="">About</a></li>
+                <li ><a href="index.html"><img class="logo" src="Logo-Movie.webp" alt="MySiteLogo" ></a> </li>
+                <li ><a href="">Home</a></li>
+                <li ><a href="">Movies</a></li>
+                <li ><a href="">Dramas</a></li>
+                <li ><a href="">Genres</a></li>
+                <li ><a href="">About</a></li>
             </ul>
         </div>
     </header>
