--- a/index.html
+++ b/index.html
@@ -14,25 +14,20 @@
 <!---------hover Menu here--------->
     <header class="ht-header">
         <div class="header-container">
+            <a href="index.html"><img class="logo" src="Logo-Movie.webp" alt="MySiteLogo" ></a>
             <ul>
-                <li ><a href="index.html"><img class="logo" src="Logo-Movie.webp" alt="MySiteLogo" ></a> </li>
-                <li ><a href="">Home</a></li>
-                <li ><a href="">Movies</a></li>
-                <li ><a href="">Dramas</a></li>
-                <li ><a href="">Genres</a></li>
-                <li ><a href="">About</a></li>
+                   
+                      <li ><a href="">Home</a></li>
+                      <li ><a href="">Movies</a></li>
+                      <li ><a href="">Dramas</a></li>
+                      <li ><a href="">Genres</a></li>
+                      <li ><a href="">About</a></li>          
             </ul>
         </div>
     </header>
 <!---on tv-->
 </div>
 <div class="tabs">
-    <ul class="tab-links-2">
-        <li><a href="#tab21">#Popular</a></li>
-        <li class="active"><a href="#tab22"> #Coming soon</a></li>
-        <li><a href="#tab23">  #Top rated  </a></li>
-        <li><a href="#tab24"> #Most reviewed</a></li>                        
-    </ul>
     <div class="tab-content">
         <div id="tab21" class="tab">
             <div class="row">
@@ -40,7 +35,7 @@
                     <div class="slide-it">
                         <div class="movie-item">
                             <div class="mv-img">
-                                <img src="images/uploads/mv-item1.jpg" alt="" width="185" height="284">
+                                <img src="movieposter.webp" alt="" width="185" height="284">
                             </div>
                             <div class="hvr-inner">
                                 <a  href="moviesingle.html"> Read more <i class="ion-android-arrow-dropright"></i> </a>
@@ -54,7 +49,7 @@
                     <div class="slide-it">
                         <div class="movie-item">
                             <div class="mv-img">
-                                <img src="images/uploads/mv-item2.jpg" alt="" width="185" height="284">
+                                <img src="movieposter.webp" alt="" width="185" height="284">
                             </div>
                             <div class="hvr-inner">
                                 <a  href="moviesingle.html"> Read more <i class="ion-android-arrow-dropright"></i> </a>
@@ -68,7 +63,7 @@
                     <div class="slide-it">
                         <div class="movie-item">
                             <div class="mv-img">
-                                <img src="images/uploads/mv-item3.jpg" alt="" width="185" height="284">
+                                <img src="mov" alt="" width="185" height="284">
                             </div>
                             <div class="hvr-inner">
                                 <a  href="moviesingle.html"> Read more <i class="ion-android-arrow-dropright"></i> </a>
