--- a/index-2.html
+++ b/index-2.html
@@ -11,7 +11,7 @@
 <!-- index14:58-->
 <head>
 	<!-- Basic need -->
-	<title>Open Pediatrics</title>
+	<title>Test Movie site</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
@@ -45,7 +45,7 @@
 							<span></span>
 						</div>
 				    </div>
-				    <a href="index-2.html"><img class="logo" src="Logo-Movie.png" alt="" width="119" height="58"></a>
+				    <a href="index-2.html"><img class="logo" src="Logo-Movie.png" alt="" width="300" height="150"></a>
 			    </div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse flex-parent" id="bs-example-navbar-collapse-1">
@@ -81,8 +81,7 @@
 					</ul>
 				</div>
 			<!-- /.navbar-collapse -->
-	    </nav>
-	    
+	    </nav>	    
 	    <!-- top search form -->
 	    <div class="top-search">
 	    	<select>
@@ -1036,9 +1035,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="sidebar">
-					<div class="ads">
-						<img src="images/uploads/ads1.png" alt="" width="336" height="296">
-					</div>
+					
 					<div class="celebrities">
 						<h4 class="sb-title">Spotlight Celebrities</h4>
 						<div class="celeb-item">
@@ -1120,6 +1117,7 @@
 	</div>
 	
 </footer>
+
 <!-- end of footer section-->
 
 <script src="js/jquery.js"></script>
