--- a/index-2.html
+++ b/index-2.html
@@ -39,7 +39,7 @@
 							<span></span>
 						</div>
 				    </div>
-				    <a href="index-2.html"><img class="logo" src="Logo-Movie.png" alt="" width="300" height="150"></a>
+				    <a href="index-2.html"><img class="logo" src="images/Logo-Movie.png" alt="" width="300" height="150"></a>
 			    </div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse flex-parent" id="bs-example-navbar-collapse-1">
@@ -1066,7 +1066,7 @@
 	<div class="container">
 		<div class="flex-parent-ft">
 			<div class="flex-child-ft item1" id="foot-side">
-				 <a href="index-2.html"><img class="logo" src="Logo-Movie.png" alt=""></a>
+				 <a href="index-2.html"><img class="logo" src="images/Logo-Movie.png" alt=""></a>
 				 <p>5th Avenue st, manhattan<br>
 				New York, NY 10001</p>
 				<p>Call us: (+976) 99XXXXXX</a></p>
